# StarPattern_AI

./: .gitignore  README.md  config.json  pyproject.toml  run_autonomous_discovery.py  run_survey_scan.py
docs/: ARCHITECTURE.md  DETECTION_GUIDE.md  RESEARCH_FINDINGS.md  TECHNICAL_ASSESSMENT.md
scripts/: generate_detection_examples.py  generate_detection_pdf.py
src/star_pattern/: __init__.py  __main__.py  cli.py
src/star_pattern/core/: __init__.py  catalog.py  config.py  fits_handler.py  healpix_survey.py  sky_region.py  tiling.py
src/star_pattern/data/: __init__.py  base.py  cache.py  gaia.py  mast.py  mosaic.py  pipeline.py  sdss.py  wide_field.py  ztf.py
src/star_pattern/detection/: __init__.py  anomaly.py  classical.py  compositional.py  distribution.py  ensemble.py  (+15 more)
tests/: conftest.py  test_catalog_cache.py  test_compositional.py  test_confidence.py  test_data_sources.py  test_detection.py  test_distributed.py  test_evaluation.py  test_evolution_improvements.py  test_evolution_summary.py  test_evolutionary.py  test_feature_fusion.py  test_fits_handler.py  test_galaxy_detector.py  test_genome.py  test_healpix_survey.py  test_llm_cache.py  test_llm_hypothesis.py  test_local_classifier.py  test_local_evaluator.py  test_meta_detector.py  test_mosaic.py  test_multi_epoch_sources.py  test_pipeline.py  test_pipeline_genome.py  test_proper_motion.py  test_representation_manager.py  test_sersic.py  test_stellar_population.py  test_strategy.py  test_temporal.py  test_tiling.py  test_token_tracker.py  test_transient.py  test_variability.py  test_wavelet.py  test_ztf_datasource.py
(+58 files in other folders)
